# frost_series

./: .gitignore  README.md  logger_config.py  main.py  pyproject.toml
TCN/: data_preparation.py  forecast.py  main.py  model_loader.py  model_training.py
data/: data.csv  Данные по 0 и 10 циклу апроксимация.xlsx  Данные по 0 и 10 циклу.xlsx  Сводная ведомость.xlsx
models/TCN_epochs50_batch32_lr0.0010/: E50_scaler.pkl  N_values.npy  model.keras  physical_scaler.pkl
scripts/: data_analysis.py  data_loader.py  holt_arima.py  math_model.py  ml.py
utils/: metrics.py  plotters.py
widget/: builder.bash  main.py  requirements.txt
widgets/: predictor.py
